--- a/android/build.gradle
+++ b/android/build.gradle
@@ -30,5 +30,5 @@ repositories {
 }
 
 dependencies {
-  implementation "com.facebook.react:react-native:+"
+  compile "com.facebook.react:react-native:+"
 }
